fix: main welcome-section percentual margins, proper wrapping, flex 1

--- a/hbnb_ui/src/app.css
+++ b/hbnb_ui/src/app.css
@@ -5,7 +5,7 @@
   --background-primary: #1b191f;
   --background-secondary: black;
   --text-color: #c6c6d6;
-  --header-background: #3d1322;
+  --header-background: #4b0721;
 }
 :root.light {
   --primary-color: #e0e1ee;
